--- a/index.html
+++ b/index.html
@@ -39,8 +39,29 @@
         </ul>
     </div>
     
-    <div class="welcome-banner">
-        <p>Hello<span>.</span><br> I am Axel</p>
+    <div class="landing-page">
+        <div class="welcome-banner">
+            <p>Hello<span>.</span><br> I am Axel</p>
+        </div>
+    </div>
+    <div class="about-me">
+        <div class="mind-map">
+            <p>Unity</p>
+            <p>HTML5</p>
+            <p>Web design</p>
+            <p>Logos</p>
+            <p>Game Design</p>
+            <p>CSS</p>
+            <p>Wordpress</p>
+            <p>JavaScript</p>
+            <p>C#</p>
+            <p>Leaflets</p>
+            <p>Brochures</p>
+            <p>Business Cards</p>
+            <p>Banners</p>
+            <p>Photo Editing</p>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat rem molestias ad nulla, dolores corporis delectus obcaecati quibusdam provident tempore. Aperiam itaque corporis qui, officiis fuga, magnam, laboriosam necessitatibus velit eius dolorum assumenda adipisci praesentium ipsam exercitationem et consequatur. Amet laudantium non minima, doloribus ab qui cum. Beatae velit omnis alias dolorem harum minus suscipit totam temporibus. Cumque tempora possimus perferendis voluptates illo enim incidunt aspernatur laboriosam consectetur aliquid consequuntur suscipit necessitatibus nulla vel, minus modi inventore facere nobis molestiae harum labore reiciendis doloribus. Cupiditate quibusdam maxime, nostrum, repellendus culpa incidunt praesentium asperiores vero possimus fugit tempora quidem quos iusto!</p>
     </div>
 </div>
 
