Started my projects image grid

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="about-me">
         <div class="mind-map">
-            <span class="large">Unity</span>
+            <!--<span class="large">Unity</span>
             <span class="large">HTML5</span>
             <span class="medium">Web design</span>
             <span class="small">Logos</span>
@@ -59,10 +59,28 @@
             <span class="small">Brochures</span>
             <span class="xsmall">Business Cards</span>
             <span class="large">Banners</span>
-            <span class="small">Photo Editing</span>
+            <span class="small">Photo Editing</span>0-->
         </div>
         
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat rem molestias ad nulla, dolores corporis delectus obcaecati quibusdam provident tempore. Aperiam itaque corporis qui, officiis fuga, magnam, laboriosam necessitatibus velit eius dolorum assumenda adipisci praesentium ipsam exercitationem et consequatur. Amet laudantium non minima, doloribus ab qui cum. Beatae velit omnis alias dolorem harum minus suscipit totam temporibus. Cumque tempora possimus perferendis voluptates illo enim incidunt aspernatur laboriosam consectetur aliquid consequuntur suscipit necessitatibus nulla vel, minus modi inventore facere nobis molestiae harum labore reiciendis doloribus. Cupiditate quibusdam maxime, nostrum, repellendus culpa incidunt praesentium asperiores vero possimus fugit tempora quidem quos iusto!</p>
+    </div>
+    <div class="projects">
+        <p>My Projects</p>
+        <div class="tiles">
+
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+            <img src="http://www.placehold.it/1920x1080" alt="">
+        </div>
     </div>
 </div>
 
