Started js code for image grids

--- a/index.html
+++ b/index.html
@@ -65,21 +65,26 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat rem molestias ad nulla, dolores corporis delectus obcaecati quibusdam provident tempore. Aperiam itaque corporis qui, officiis fuga, magnam, laboriosam necessitatibus velit eius dolorum assumenda adipisci praesentium ipsam exercitationem et consequatur. Amet laudantium non minima, doloribus ab qui cum. Beatae velit omnis alias dolorem harum minus suscipit totam temporibus. Cumque tempora possimus perferendis voluptates illo enim incidunt aspernatur laboriosam consectetur aliquid consequuntur suscipit necessitatibus nulla vel, minus modi inventore facere nobis molestiae harum labore reiciendis doloribus. Cupiditate quibusdam maxime, nostrum, repellendus culpa incidunt praesentium asperiores vero possimus fugit tempora quidem quos iusto!</p>
     </div>
     <div class="projects">
-        <p>My Projects</p>
+        <p><span>My</span> Projects</p>
+        <div>
+            <img  id="highlightImage" src="https://placehold.it/200x200" alt="">
+        </div>
         <div class="tiles">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
+            <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
 
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
-            <img src="http://www.placehold.it/1920x1080" alt="">
+            
         </div>
     </div>
 </div>
@@ -90,6 +95,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 
 </body>
 </html>
