Added highlight image close functionality

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
     </div>
     <div class="projects">
         <p><span>My</span> Projects</p>
-        <div>
-            <img  id="highlightImage" src="https://placehold.it/200x200" alt="">
+        <div id="highlightImage">
+            <img src="https://placehold.it/200x200" alt="">
+            <div class="closeImage" target="highlightImage"></div>
         </div>
         <div class="tiles">
             <img class="gridImage" src="https://placehold.it/1920x1080" alt="">
